# WebDAV-Client

./: App.cpp  App.h  BorderRectangle.qml  CMakeLists.txt  DataJsonFile.cpp  DataJsonFile.h  EditServerDialog.qml  JsonFile.cpp  JsonFile.h  Logger.cpp  Logger.h  Main.qml  QmlLogger.cpp  QmlSettings.cpp  QmlSettings.h  README.md  ServerInfo.cpp  ServerInfo.h  ServerInfoManager.cpp  ServerInfoManager.h  ServerItemModel.cpp  ServerItemModel.h  Settings.cpp  Settings.h  SettingsJsonFile.cpp  SettingsJsonFile.h  Util.h  main.cpp  pch.h
android/: AndroidManifest.xml  build.gradle
android/src/org/qtproject/webdavclient/: MyBroadcastReceiver.java  NotificationClient.java
src/: App.cpp  App.h  Logger.cpp  Logger.h  NotificationClient.cpp  NotificationClient.h  ServerInfo.cpp  ServerInfo.h  ServerInfoManager.cpp  ServerInfoManager.h  Util.cpp  Util.h  main.cpp  pch.h
src/FileSystem/: Client.cpp  Client.h  FileSystemModel.cpp  FileSystemModel.h  FileSystemObject.cpp  FileSystemObject.h  Parser.cpp  Parser.h
src/FileSystem/Parser/: CurrentState.cpp  CurrentState.h  CurrentState_impl.cxx  FSObjectStruct.cpp  FSObjectStruct.h  FSObjectStruct_impl.cxx  Parser.cpp  Parser.cxx  Parser.h  Parser_impl.cxx  TimeParser.cpp  TimeParser.h  TimeParser_impl.cxx
src/Json/: DataJsonFile.cpp  DataJsonFile.h  JsonFile.cpp  JsonFile.h  SettingsJsonFile.cpp  SettingsJsonFile.h
src/Qml/: CustomMessageBox.qml  CustomMsgBox.qml  EditServerDialog.qml  EditServerItemMenu.qml  FileItemMenu.qml  FileItemModel.cpp  FileItemModel.h  FileListPageColumnLayout.qml  FileListPageRectangle.qml  FileSystemModel.cpp  FileSystemModel.h  IconProvider.cpp  IconProvider.h  ItemModelManager.cpp  ItemModelManager.h  LogPageColumnLayout.qml  Logger.cpp  Logger.h  Main.qml  ProgressDialog.qml  QmlLogger.cpp  QmlLogger.h  QmlSettings.cpp  QmlSettings.h  ServerItemMenu.qml  ServerItemModel.cpp  ServerItemModel.h  ServerListPageColumnLayout.qml  Settings.cpp  Settings.h  SettingsPageColumnLayout.qml  TextContextMenu.qml  Util.js
src/Qml/Core/: BorderRectangle.qml  Button.qml  ContentItem.qml  CustomMessageBox.qml  ListView.qml  MessageBox.qml  SelectionSequentialAnimation.qml  Timer.qml
src/Qml/FileItemModel/: FileItemModel.cpp  FileItemModel.h  Role.h  SizeDisplayer.cpp  SizeDisplayer.h
src/Qml/Logger/: LogItemMenu.qml  LogItemModel.cpp  LogItemModel.h  LogPageColumnLayout.qml
src/Qml/Sort/: FileSortFilterItemModel.cpp  FileSortFilterItemModel.h  SortDialog.qml  SortParam.cpp  SortParam.h  SortParamItemModel.cpp  SortParamItemModel.h
src/Tests/: ParserTest.cpp  ParserTest.h  SizeDisplayerTest.cpp  SizeDisplayerTest.h  Tests.cpp  Tests.h  Util.cpp  Util.h  UtilTest.cpp  UtilTest.h  main.cpp  pch.h
